--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </form>
     </div>
-    
+    <footer>Made with <img src="passion.png" alt="passion" style="width:25px"> by Amit</footer>
     <!-- Load Script -->
     <script src="index.js"></script>
 </body>
